Fix overflow horizontal

--- a/src/index.css
+++ b/src/index.css
@@ -55,7 +55,8 @@
 }
 
 @layer base {
-  * {
+  *, *::before, *::after {
+    box-sizing: border-box;
     @apply border-border;
   }
 
